Fixed horizontal scroll on login and registration pages.

--- a/static/CSS/main.css
+++ b/static/CSS/main.css
@@ -5,38 +5,25 @@ body {
     background: -webkit-linear-gradient(to bottom, #543864, #ff6363, #ffbd69);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to bottom, #543864, #ff6363, #ffbd69); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
+    box-sizing: border-box;
 
     min-height: 100vh;
-    width: 100vw;
-    margin: 0;
+    width: 100%;
 
     display: grid;
     grid-template-rows: 60px 1fr 30px; /* 2fr row is nav, 20 fr row is main page content, 1fr row is footer*/
 }
 
-/* #navbar_name {
-  font-weight: bold;
-  color: goldenrod;
-} */
+*, *:before, *:after {
+    box-sizing: inherit;
+
+    /* remove any margin or padding added by browser */
+    margin: 0;
+    padding: 0;
+}
 
 #footer {
   background-color: #343A40;
   color: white;
   width: 100%;
 }
-
-/* #page-container {
-    position: relative;
-    min-height: 100vh;
-  }
-  
-  #content-wrap {
-    padding-bottom: 2.5rem;    
-  }
-  
-  #footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 2.5rem;           
-  } */
